edited the ordered list

--- a/04intro-css/custom.css
+++ b/04intro-css/custom.css
@@ -80,7 +80,7 @@ main ul {
 }
 
 main ol {
-    padding: 0.5rem 3vw;
+    padding: 0.5rem 2rem;
     background-color: #dadada;
     border-radius: 5px;
     border: 1px solid #dadada;
