--- a/07advanced-css/custom.css
+++ b/07advanced-css/custom.css
@@ -90,6 +90,48 @@ header p {
         background-image: linear-gradient(45deg, #1e3c1d, #295128);
         border-radius: 10px;
     }
+
+    /*gallery*/
+
+    div.gallery {
+        display: block;
+        justify-content: space-around;
+        column-count: 1;
+        column-gap: 0;
+        width: 100%;
+    }
+    
+    div.gallery figure {
+        margin: 0.5rem;
+        break-inside: avoid-column;
+        page-break-inside: avoid;
+    }
+    
+    div.gallery img {
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+    }
+    
+    div.gallery figure:hover {
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+        border-radius: 10px;
+        transition-duration: 0.3s;
+        transition-property: box-shadow;
+    }
+    
+    div.gallery figcaption {
+        text-align: center;
+        background-color: #db8d97;
+        font-size: 0.9rem;
+        padding: 0.4rem 0;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
 }
 
 /*big screen*/
@@ -126,6 +168,49 @@ header p {
     
     nav li.active a {
         color: #fefff9;
+    }
+
+    /*gallery*/
+
+    div.gallery {
+        display: block;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        column-count: 3;
+        column-gap: 0;
+        width: 100%;
+    }
+    
+    div.gallery figure {
+        margin: 0.5rem;
+        break-inside: avoid-column;
+        page-break-inside: avoid;
+    }
+    
+    div.gallery img {
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        display: block;
+        align-items: center;
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+    }
+    
+    div.gallery figure:hover {
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+        border-radius: 10px;
+        transition-duration: 0.3s;
+        transition-property: box-shadow;
+    }
+    
+    div.gallery figcaption {
+        text-align: center;
+        background-color: #db8d97;
+        font-size: 0.9rem;
+        padding: 0.4rem 0;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
     }
 }
 
@@ -250,44 +335,7 @@ figure.front figcaption {
     border-bottom-right-radius: 10px;
 }
 
-div.gallery {
-    display: block;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    column-count: 3;
-    column-gap: 0;
-    width: 100%;
-}
 
-div.gallery figure {
-    margin: 0.5rem;
-    break-inside: avoid-column;
-    page-break-inside: avoid;
-}
-
-div.gallery img {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    display: block;
-    align-items: center;
-    width: 100%;
-}
-
-div.gallery figure:hover {
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    border-radius: 10px;
-    transition-duration: 0.3s;
-    transition-property: box-shadow;
-}
-
-div.gallery figcaption {
-    text-align: center;
-    background-color: #db8d97;
-    font-size: 0.9rem;
-    padding: 0.4rem 0;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
 
 /*contact*/
 
